# pali-coin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  backup_and_push.sh  blockchain.rs  build_ultra_secure.sh  create_missing_dirs.sh  index.html  main.rs  network.rs  pali-ultra-secure.toml  quick_setup.sh  recovered_wallet.json  rename_to_palicoin.sh  secure_channel.rs  start_ultra_secure_node.sh  test-runner.sh  update_pali.sh  wallet.json  wallet2.json
community/: README.md
community/marketing/: strategy.md
community/website/: landing-page.md
data/blockchain.db/: 000008.sst  IDENTITY  LOG  LOG.old.1747899303853476  MANIFEST-000010
disabled_bins/: test_pali.rs
disabled_bins/pali-wallet/: main.rs
docs/: README.md  SPECIFICATIONS.md
docs/developer-guide/: api-reference.md
docs/user-guide/: getting-started.md
pali_data/: 000008.sst  IDENTITY  LOG  LOG.old.1747727549235153  LOG.old.1747727557622962  LOG.old.1747727558132081  LOG.old.1747727558640201  LOG.old.1747727559148412  LOG.old.1747727559656281  LOG.old.1747727566221362  LOG.old.1747727566725150  LOG.old.1747727567228321  LOG.old.1747727567731364  LOG.old.1747727568235014  MANIFEST-000010
pali_data/blockchain.db/: 000008.sst  IDENTITY  LOG  LOG.old.1747755715662689  MANIFEST-000010
scripts/deployment/: mainnet_deploy.sh
scripts/maintenance/: backup.sh
scripts/testing/: run_tests.sh
src/: blockchain.rs  config.rs  constants.rs  error.rs  hdwallet.rs  lib.rs  main.rs  main.rs.backup  miner.rs  mining.rs  multisig.rs  netsecurity.rs  network.rs  p2p.rs  secure_channel.rs.disabled  security.rs  types.rs  utils.rs  wallet.rs  wallet.rs.bak  wallet.rs.disabled  zk_miner.rs
static/css/: styles.css
templates/: index.html  wallet.html
tests/: address_test.rs  advanced_security_test.rs  ecdsa_test.rs  integration_test.rs  secure_channel_test.rs  transaction_test.rs
tests/unit/: blockchain_test.rs  secure_channel_test.rs  transaction_test.rs  wallet_test.rs
