[package]
name = "pali-coin"
version = "0.1.0"
edition = "2021"
authors = ["Pali Coin Development Team"]
description = "A secure, modern cryptocurrency implementation in Rust"
license = "MIT"
repository = "https://github.com/your-username/pali-coin"
keywords = ["cryptocurrency", "blockchain", "bitcoin", "mining"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core cryptography
secp256k1 = { version = "0.28.0", features = ["rand", "recovery", "global-context"] }
k256 = { version = "0.13.1", features = ["ecdh", "ecdsa", "sha256"] }
ripemd = "0.1.3"
sha2 = "0.10"
hmac = "0.12.1"
argon2 = "0.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
subtle = "2.5"

# BIP standards and wallet functionality
bip39 = "2.0.0"
bip32 = "0.5"
hkdf = "0.12.0"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

# Random number generation
rand = { version = "0.8.5", features = ["std_rng"] }
rand_core = "0.6"

# Networking and async runtime
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Web interface
warp = { version = "0.3", features = ["tls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
handlebars = "4.3"

# Serialization and data formats
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3.12.0", features = ["hex"] }
bincode = "1.3"
toml = "0.8"

# Storage and database
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }

# Zero-knowledge proofs (optional)
bellman = { version = "0.14", features = ["groth16"], optional = true }
bls12_381 = { version = "0.8", optional = true }
ff = { version = "0.13", optional = true }
group = { version = "0.13", optional = true }
pairing = { version = "0.23", optional = true }

# Additional cryptography
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
pbkdf2 = "0.12.2"
blake3 = "1.5"

# Time and utilities
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.21"

# Logging and monitoring
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and CLI
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.13"
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Performance and memory
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"

# Network protocols
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "kad"], optional = true }

base58 = "0.2"
base32 = "0.4"

[features]
default = ["rocksdb-storage"]
zk-proofs = ["bellman", "bls12_381", "ff", "group", "pairing"]
rocksdb-storage = []
web-interface = []
p2p-network = ["libp2p"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Production-ready binaries
[[bin]]
name = "pali-node"
path = "src/main.rs"

[[bin]]
name = "pali-miner"
path = "src/miner.rs"

[[bin]]
name = "pali-wallet"
path = "src/bin/wallet.rs"

[[bin]]
name = "pali-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "pali-web"
path = "src/bin/web.rs"

[lib]
name = "pali_coin"
path = "src/lib.rs"

# Additional security dependencies for checklist compliance
regex = "1.7"
tokio-stream = "0.1"
tower = "0.4"
ring = "0.16"
rustls = "0.21"
once_cell = "1.19"
lazy_static = "1.4"
